--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
+    "recharts": "^2.12.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
