--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "file-saver": "^2.0.5",
     "mdb-react-ui-kit": "^7.2.0",
     "mdbootstrap": "^4.20.0",
     "react": "^18.2.0",
